fixed footer, aligning card section, jumbotron

--- a/less/index.less
+++ b/less/index.less
@@ -28,14 +28,7 @@ img.nav-img {
 }
 
 
-//Jumbotron section
-// .bg {
-// 	// height: 100%;
-// 	background-image:url('img/girlandlaptop.jpg');
-// 	background-position: center;
-// 	background-repeat: no-repeat;
-// 	background-size: cover;
-// }
+// Jumbotron Section
 .jumbotron {
 	background-color: lightpink;
 	padding-top: 50px;
@@ -44,7 +37,7 @@ img.nav-img {
   text-align: center;
   color: white;
   z-index: -4;
-  height: 670px;
+  height: 743px;
 }
 
 .name-content {
@@ -81,18 +74,23 @@ img.nav-img {
 }
 
 .box {
-	display: flex;
-	width: 100%
+	// display: flex;
+	// width: 100%
 	width: 400px;
+
+}
+
+.card-title {
+	border: 1px solid black;
+	font-size: 16px;
 }
 
 .no-gutters {
 	margin-top: 50px;
+	width: 75%;
+	margin-left: 150px;
 }
 
-.card-img-top {
-	height: 300px;
-}
 
 .carousel-item .active {
 	height:400px;
@@ -118,9 +116,28 @@ img.nav-img {
 	background-color: black;
 	opacity: 0.6;
 	filter: alpha(opacity=60);
+	margin-top: 349px;
+}
+.motto {
+	margin-top: 450px;
+	// border: 1px solid white;
+	height: 103px;
+	background-color: lightpink;
+	opacity: 0.8;
+	height: 100px;
+	text-align: center;
+	padding-top:30px;
 }
 
+.card-img-top {
+	height: 300px;
+}
 
+.card-title2 h5 {
+	font-size: 17px;
+}
+
+//Floating Letters Section - See JS file
 #letters{
     padding-top: 100px;
     margin-left: 302px;
@@ -145,9 +162,7 @@ img.nav-img {
     font-size: 17px
     width: 100%;
     // padding-left: 474px;
-
 }
-
 
 .floating-letters-text li {
     display: inline-block;
@@ -200,15 +215,13 @@ img.nav-img {
     transform: translateX(-100px) translateY(-400px);
 }
 
-.motto {
-	margin-top: 450px;
-	border: 1px solid white;
-	height: 103px;
-	background-color: lightpink;
-	opacity: 0.6;
-	height: 100px;
 
+
+
+footer {
+	margin-top: 50px;
 }
+
 
 
 
